src/assets/scss/page/shop.scss
.shop__container {

    padding-block-start: 48px;

}

.shop__content {
    
    display: flex;
    flex-direction: column;
    overflow: clip;

    gap: 12px;

}

.shop__list {

    list-style: none;
    
    display: flex;
    flex-direction: row;    
    gap: 12px;

    position: relative;

    animation-timeline: view(block);
    animation-name: slideTest;
    animation-range: -10% 200%;
    animation-fill-mode: both;
    animation-duration: 1ms; /* Firefox requires this to apply the animation */

    width: calc(200*4px + 300px + 100vw);


}

.invert {

    animation-name: slideTestInvert;

}

.shop__item {

    width: 200px;
    height: 300px;

    background-color: var(--color-green-300);
    background-size: 100%;
    background-position: 50% 50%;

    border: 1px solid var(--color-grey-100);

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    transition: all 0.2s ease;

}

.shopItem__title {

    color: var(--color-grey-100);
    font-family: 'Panchang';
    font-weight: 700;
    font-size: 2rem;
    text-align: center;

    padding-block: 6px;
    margin: 0;
    background-color: var(--color-green-300);


}

.shopItem__more {
        
    display: none;

}

.shopItem__sizes {

    list-style: none;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    gap: 12px;

    padding: 0;
    padding-block: 6px;
    margin: 0;
    background-color: var(--color-green-300);

    color: black;

    bottom: 0;

}

@keyframes slideTest {
    0% {
        transform: translate(0, 0);
    }

    1% {
        transform: translate(0, 0%);
    }

    100% {
        transform: translate(-45%, 0);
    }
}

@keyframes slideTestInvert {
    0% {
        transform: translate(0, 0);
    }

    1% {
        transform: translate(-45%, 0);
    }

    100% {
        transform: translate(0, 0);
    }
}

.middle {

    background-image: url(../img/learnMore.JPG);
    width: 300px;

}

.middle:hover {

    cursor: pointer;
    background-size: 105%;
    filter: brightness(1.3);

}

@media all and (min-width: 1024px) {

    .shop__container {

        padding-inline-end: 240px;
        
    }

    .shop__content {
        
        display: flex;
        flex-direction: row;

        gap: 24px;

        overflow: visible;
        
    }

    .shop__list {

        list-style: none;
        
        display: flex;
        flex-direction: column;
        
        gap: 24px;
        
        margin: 0;
        padding: 0;

        animation-timeline: view(inline);
        animation-name: slideTest;
        animation-range: -10% 200%;
        animation-fill-mode: both;
        animation-duration: 1ms; /* Firefox requires this to apply the animation */

        width: 100%;

    }

    .invert {

        animation-name: slideTestInvert;

    }

    .shop__item {

        width: 408px;
        height: 408px;

        position: relative;
        overflow: hidden;

        background-color: var(--color-green-300);
        background-size: 100%;
        background-position: 50% 50%;

        border: 1px solid var(--color-grey-100);

        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;

        transition: all 0.2s ease;

    }

    .shopItem__title {

        color: var(--color-grey-100);
        font-family: 'Panchang';
        font-weight: 700;
        font-size: 2rem;
        text-align: center;

        padding-block: 12px;
        margin: 0;
        background-color: var(--color-green-300);

        width: 100%;
        
    }
    
    .shopItem__more {
        
        width: 42px;
        height: 42px;
        
        padding: 12px;
        
        background-color: var(--color-green-300);
        border: 1px solid var(--color-grey-100);

        display: block;
        position: absolute;
        bottom: -5%;
        z-index: 0;

        transition: all 0.2s ease;
        
    }
    
    .shopItem__sizes {
        
        list-style: none;
        
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        
        width: 100%;
        gap: 32px;
        
        padding: 0;
        padding-block: 12px;
        margin: 0;
        background-color: var(--color-green-300);
        
        color: black;
        
        bottom: 0;
        z-index: 1;
        
    }

    @keyframes slideTest {
        0% {
            transform: translate(0, 0);
        }

        1% {
            transform: translate(0, -55%);
        }

        100% {
            transform: translate(0, 0%);
        }
    }

    @keyframes slideTestInvert {
        0% {
            transform: translate(0, 0);
        }

        1% {
            transform: translate(0, 0%);
        }

        100% {
            transform: translate(0, -55%);
        }
    }

    .middle {

        background-image: url(../img/learnMore.JPG);
        height: 552px;

    }
    .middle:hover {

        cursor: pointer;
        background-size: 105%;
        filter: brightness(1.3);

    }

    .middle:hover .shopItem__more {

        bottom: 20%;

    }
  
}

